[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "oldest-supported-numpy"
]

[project]
name = "swmmtoolbox"
dynamic = ["readme", "version"]
description = "Command line script and Python library to read Storm Water Management Model binary output."
dependencies = [
    "toolbox_utils >= 3.0.0, < 4.0.0",
    "cltoolbox >= 1.0.0"
]
authors = [
    {name = "Tim Cera", email = "tim@cerazone.net"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = [
    "time-series",
    "cli-app",
    "swmm",
    "stormwater",
    "hydrograph",
    "model",
    "simulation",
    "hydrology"
]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "blacken-docs",
    "black-nbconvert",
    "cleanpy",
    "commitizen",
    "coverage[toml]",
    "isort",
    "mypy",
    "pre-commit",
    "pyflakes",
    "pylama",
    "pyle",
    "pylint",
    "pyre",
    "pyroma",
    "pytest",
    "pytest-cov",
    "pytest-mpl",
    "pyupgrade",
    "twine",
    "unimport",
    "velin",
    "vulture"
]

[project.scripts]
swmmtoolbox = "swmmtoolbox.swmmtoolbox:main"

[project.urls]
documentation = "https://timcera.bitbucket.io/swmmtoolbox/docs/index.html#swmmtoolbox-documentation"
github = "https://github.com/timcera/swmmtoolbox"
bitbucket = "https://bitbucket.org/timcera/swmmtoolbox/src/main/"

[tool.check-manifest]
ignore = [
    "docs/_function_autosummary/*",
    ".coverage",
    ".deepsource.toml",
    ".ipynb_checkpoints/*"
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "4.0.6"
version_files = ["VERSION"]

[tool.isort]
profile = "black"

[tool.setuptools]
license-files = ["LICENSE.txt"]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {file = "VERSION"}

[tool.setuptools.packages.find]
exclude = ["examples*", "tools*", "docs*", "swmmtoolbox.tests*"]
where = ["src"]

[tool.setuptools_scm]
