[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]

[project]
name = "swmmtoolbox"
dynamic = ["readme", "version"]
description = "Command line script and Python library to read Storm Water Management Model binary output."
dependencies = [
    "cltoolbox >= 1.0.0",
    "dateparser",
    "numpy",
    "pandas[excel]",
    "pint!=0.21.*",
    "pint<0.22; python_version < '3.9'",
    "pint-pandas",
    "pydantic",
    "scipy",
    "tabulate"
]
authors = [
    {name = "Tim Cera", email = "tim@cerazone.net"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = [
    "time-series",
    "cli-app",
    "swmm",
    "stormwater",
    "hydrograph",
    "model",
    "simulation",
    "hydrology"
]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"

[project.scripts]
swmmtoolbox = "swmmtoolbox.swmmtoolbox:main"

[project.urls]
documentation = "https://timcera.bitbucket.io/swmmtoolbox/docs/index.html#swmmtoolbox-documentation"
github = "https://github.com/timcera/swmmtoolbox"
bitbucket = "https://bitbucket.org/timcera/swmmtoolbox/src/main/"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "4.0.15"
version_files = ["VERSION"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
license-files = ["LICENSE.txt"]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
