[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm[simple]>=8",
    "setuptools>=80"
]

[project]
authors = [
    {email = "tim@cerazone.net", name = "Tim Cera"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
] # Get strings from http://pypi.python.org/pypi?%3Aaction=list_classifiers
dependencies = [
    "cltoolbox >= 1.0.0",
    "dateparser",
    "numpy",
    "pandas[excel]",
    "pint!=0.21.*",
    "pint-pandas",
    "pint<0.22; python_version < '3.9'",
    "pydantic",
    "scipy",
    "tabulate"
]
description = "Command line script and Python library to read Storm Water Management Model binary output."
dynamic = ["readme", "version"]
keywords = [
    "cli-app",
    "hydrograph",
    "hydrology",
    "model",
    "simulation",
    "stormwater",
    "swmm",
    "time-series"
]
license = {text = "BSD-3-Clause"}
name = "swmmtoolbox"
requires-python = ">=3.10"

[project.scripts]
swmmtoolbox = "swmmtoolbox.swmmtoolbox:main"

[project.urls]
bitbucket = "https://bitbucket.org/timcera/swmmtoolbox/src/main/"
documentation = "https://timcera.bitbucket.io/swmmtoolbox/docs/index.html#swmmtoolbox-documentation"
github = "https://github.com/timcera/swmmtoolbox"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "4.0.15"
version_files = ["VERSION"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE.txt"]

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
